--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
                 </div>
                 
                 <div class="item2">
-                    <a href="#" data-aos="flip-right" data-aos-delay="600">+38 (073) 096 36 44</a><br>
-                    <a href="#" data-aos="flip-right" data-aos-delay="600">info@yanki.com</a>
+                    <a id="a_color" href="#" data-aos="flip-right" data-aos-delay="600">+38 (073) 096 36 44</a><br>
+                    <a id="a_color"  href="#" data-aos="flip-right" data-aos-delay="600">info@yanki.com</a>
                 </div>
             </div>
         </div>
