--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="container">
             <header class="header">
                 <div class="header-left">
-                    <div class="burger-menu">
+                    <div class="burger-menu bt">
                         <span></span>
                         <span></span>
                         <span></span>
